# IOT_WakeUpLight

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  doxycb.cnf
General/: Colors.txt
cmake/: macros.cmake
mock/: Adafruit_NeoPixel.h  Arduino.h  README.md  Serial.cpp  String.cpp
mock/meta/: callable.cpp  callable.h
src/prototype/: Time.cpp  alarm.cpp  alarm.h  ledpattern.cpp  ledpattern.h  microTime.cpp  microTime.h  microtime.cpp  microtime.h  ntpClient.cpp  ntpClient.h  ntpclient.cpp  ntpclient.h  permconfig.cpp  permconfig.h  prototype.ino  rgbColor.cpp  rgbColor.h  rgbcolor.cpp  rgbcolor.h  serialcommand.cpp  serialcommand.h  springyValue.cpp  springyValue.h  springyvalue.cpp  springyvalue.h  testcases.cpp  testcases.h  time.cpp  wulTypedef.h  wultypedef.h
src/rgbdriver/: alarm.cpp  alarm.h  ledpattern.cpp  ledpattern.h  microtime.cpp  microtime.h  oldcode.ino.old  pwmledcontrol.h  rgbcolor.cpp  rgbcolor.h  rgbdriver.ino  rgbrltypedef.h  serialcommand.cpp  serialcommand.h  simpleledpattern.cpp  simpleledpattern.h  time.cpp  timelib.h
src/rgbdriver_netbeans/rgbdriverNB/: alarm.cpp  alarm.h  ledpattern.cpp  ledpattern.h  main.cpp  microtime.cpp  microtime.h  rgbcolor.cpp  rgbcolor.h  rgbrltypedef.cpp  rgbrltypedef.h  simpleledpattern.cpp  simpleledpattern.h  templateneopixel.cpp  templateneopixel.h  timelib.h
src/rgbdriver_netbeans/rgbdriverNB/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/rgbdriver_netbeans/rgbdriverNB/nbproject/private/: private.xml
src/rgbdriverv2/: actor.cpp  actor.h  deltalimiter.cpp  deltalimiter.h  deltatimer.cpp  deltatimer.h  framerate.cpp  framerate.h  neoanimation.cpp  neoanimation.h  neopatterns.cpp  neopatterns.h  pwmledcontrol.cpp  pwmledcontrol.h  rgbdriverv2.ino  serialcommand.cpp  serialcommand.h  smoothmapread.cpp  smoothmapread.h  typedefinitions.h
src/webcontroller/: webcontroller.ino
test/: CMakeLists.txt  testdeltalimiter.cpp  testdeltatimer.cpp  testframerate.cpp  testneopatterns.cpp
